tests/ui/feature-gates/feature-gate-global-registration.stderr
error: expected one of `!` or `::`, found `(`
  --> $DIR/feature-gate-global-registration.rs:1:1
   |
LL | todo!();
   | ^^^^^^^
   | |
   | expected one of `!` or `::`
   | in this macro invocation
   |
   = note: this error originates in the macro `todo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

