tests/ui/feature-gates/feature-gate-global-registration.rs
#![allow(todo_macro_calls)]
todo!(); //~ ERROR

fn main() {}
